fix profile spacing

--- a/Style Sheets/about.css
+++ b/Style Sheets/about.css
@@ -8,6 +8,7 @@
 
 .text {
     font-size: 1.2em;
+    margin: auto;
     margin-bottom: 20px;
     color: white;
 }
@@ -18,12 +19,32 @@
     gap: 150px;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     width: 1000px;
     margin: auto;
 }
 
+.leftTitleColumn {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: left;
+    align-items: left;
+    width: 1000px;
+    margin: auto;
+}
+
+.name {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin-bottom: 10px;
+    margin-top: 0px;
+    color: white;
+}
+
 .table {
+    margin: auto;
     border-spacing: 30px;
+    table-layout: fixed;
+    margin: auto;
 }
 
